--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,15 +17,15 @@
         </a>
       </div>
       <ul class="menu">
-        <li>
-          <a (click)="goHome()" class="home">Início</a>
-        </li>
-        <li>
-          <a href="https://play.google.com/store/apps/details?id=br.com.taxireturn.client.evadrive" target="_blank">Eva Passageira</a>
-        </li>
-        <li>
-          <a href="https://play.google.com/store/apps/details?id=br.com.taxireturn.driver.evadrive" target="_blank">Eva Motorista</a>
-        </li>
+<!--        <li>-->
+<!--          <a (click)="goHome()" class="home">Início</a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="https://play.google.com/store/apps/details?id=br.com.taxireturn.client.evadrive" target="_blank">Eva Passageira</a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="https://play.google.com/store/apps/details?id=br.com.taxireturn.driver.evadrive" target="_blank">Eva Motorista</a>-->
+<!--        </li>-->
         <li class="d-sm-none">
           <a href="https://play.google.com/store/apps/details?id=br.com.taxireturn.client.evadrive" target="_blank" class="m-0 header-button">
             Baixe o APP
@@ -46,24 +46,18 @@
 <section class="banner-3 bg_img oh" data-background="./assets/images/banner/banner-bg-3.jpg">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-lg-7">
+      <div class="col-lg-12">
         <div class="banner-content-3 cl-white">
-          <h1 class="title">Mulheres motoristas levam</h1>
-          <p>
-            Mulheres passageiras
-          </p>
-          <div class="banner-button-group">
-            <a href="https://play.google.com/store/apps/details?id=br.com.taxireturn.client.evadrive" target="_blank" class="button-4">Experimentar</a>
-            <a href="https://www.youtube.com/watch?v=AnrB_FMFVQs" class="play-button popup">
-              <img src="./assets/images/button/play1.png" alt="button">
-              <span>Reproduzir vídeo</span>
-            </a>
-          </div>
+          <h1 class="title">Mulheres motoristas levam <span>Mulheres passageiras</span></h1>
         </div>
       </div>
-      <div class="col-lg-5 d-none d-lg-block">
-        <div class="banner-thumb-3">
-          <img class="wow slideInRight" src="./assets/images/banner/banner3-1.png" alt="banner">
+      <div class="col-lg-12">
+        <div class="video-container">
+          <iframe
+                  src="https://www.youtube.com/embed/AnrB_FMFVQs?autoplay=1"
+                  frameborder="0"
+                  allow="accelerometer; encrypted-media; gyroscope;"
+                  allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -183,7 +177,7 @@
       <div class="col-lg-6 col-xl-5">
         <div class="section-header left-style">
           <h5 class="cate">Protegendo-as dos assédios e importunações</h5>
-          <h2 class="title">Serviços EVA</h2>
+          <h2 class="title">Vantagens EVA</h2>
           <p>
             A corrida pode ser agendada com 30 minutos de antecedência de segunda à sexta, horário comercial.
 
