--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,36 @@
 p a {
   color: #444444;
 }
-
+.banner-content-3{
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
 .home {
   cursor: pointer;
+}
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  box-shadow: 0 12px 24px rgb(0 0 0 / 51%);
+  border: 5px solid #f855cb;
+  border-radius: 18px;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.video {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+}
+.banner-content-3 .title{
+  font-size: 66px;
+  line-height: 66px;
+  text-align: center;
+  margin-bottom: auto;
 }
